logs/tracwikitemplates.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/TracCtxtnavAdd-1.1.post1.egg-info'...
Listing './lib/python3.5/site-packages/TracWikiTemplates-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/WikiTemplates'...
Listing './lib/python3.5/site-packages/WikiTemplates/DefaultTemplates'...
Compiling './lib/python3.5/site-packages/WikiTemplates/attachment.py'...
***   File "./lib/python3.5/site-packages/WikiTemplates/attachment.py", line 154
    raise TracError, 'Could not delete attachment'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/WikiTemplates/htdocs'...
Listing './lib/python3.5/site-packages/WikiTemplates/htdocs/css'...
Listing './lib/python3.5/site-packages/WikiTemplates/htdocs/img'...
Listing './lib/python3.5/site-packages/WikiTemplates/htdocs/js'...
Listing './lib/python3.5/site-packages/WikiTemplates/macros'...
Compiling './lib/python3.5/site-packages/WikiTemplates/macros/includes.py'...
***   File "./lib/python3.5/site-packages/WikiTemplates/macros/includes.py", line 64
    raise TracError, "Nothing was passed"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/WikiTemplates/macros/templates.py'...
***   File "./lib/python3.5/site-packages/WikiTemplates/macros/templates.py", line 95
    raise TracError, err
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/WikiTemplates/templates'...
Listing './lib/python3.5/site-packages/WikiTemplates/upgrades'...
Compiling './lib/python3.5/site-packages/WikiTemplates/upgrades/db1.py'...
***   File "./lib/python3.5/site-packages/WikiTemplates/upgrades/db1.py", line 46
    print 'Upgrading WikiTemplates plugin...'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/WikiTemplates/web_ui.py'...
***   File "./lib/python3.5/site-packages/WikiTemplates/web_ui.py", line 197
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ctxtnavadd'...
Listing './lib/python3.5/site-packages/ctxtnavadd/htdocs'...
Listing './lib/python3.5/site-packages/ctxtnavadd/htdocs/js'...
Listing './lib/python3.5/site-packages/ctxtnavadd/templates'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
